<resources>
    <string name="app_name">HisabKitab</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_new_sale">New Sale</string>
    <string name="menu_bill_history">Bill History</string>
    <string name="menu_credit_notes">Credit Notes</string>
    <string name="menu_inventory">Inventory</string>
    <string name="menu_customer_management">Customer Management</string>
    <string name="menu_staff_management">Staff Management</string>
    <string name="menu_credit_details">Credit Details</string>
    <string name="menu_dayBook">Day Book</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_settings_shop_details">Shop Details Management</string>


    <string name="settings_item_1">Invoice Settings</string>
    <string name="settings_item_2">Tax Settings</string>
    <string name="settings_item_3">POS Settings</string>
    <string name="settings_item_4">Bill Settings</string>
    <string name="settings_item_5">Printer Setup</string>
    <string name="settings_item_6">Theme</string>
    <string name="settings_item_7">Reset</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="bill_history"></string>
    <string name="des_bill_history">This role enables user to view bill history, create return bills, and cancel bills etc.</string>


    <string name="terms">By Proceeding, you agree to our Terms and Conditions, Privacy Policy Refund and Cancellation Policy. SMS would be send to your Registered mobile number for verification</string>



    <string name="printer_size">Printer Size : </string>
    <string name="printer_mode">Printer Mode : </string>
    <string name="font_size">Font Size : </string>

    <!-- Switch Labels -->
    <string name="enable_auto_print">Enable Auto Print : </string>
    <string name="open_cash_drawer">Open Cash Drawer : </string>
    <string name="disconnect_after_print">Disconnect After Print : </string>
    <string name="auto_cut_after_print">Auto-Cut After Printing : </string>
    <string name="enable_cash_balance">Enable Cash Balance </string>
    <string name="block_out_of_stock">Block Out Of Stock Sale : </string>
    <!-- Default Printer Section -->
    <string name="default_printer">Default Printer</string>
    <string name="change">Change</string>
    <string name="printer_icon">Printer Icon</string>

    <!-- Button -->
    <string name="update">Update</string>
</resources>