<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>
        <variable
            name="thermalPrinter"
            type="com.kreativesquadz.billkit.model.settings.ThermalPrinterSetup" />
        <variable
            name="isUpdateEnable"
            type="Boolean" />
        <variable
            name="isDefaultPrinterAdded"
            type="Boolean" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/linearLayout">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="@color/text_color_heading_reverse">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

           
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView android:fontFamily="@font/montserrat_medium"
                    android:textSize="@dimen/txt_14sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:gravity="center|left"
                    android:text="@string/printer_size"
                    android:layout_weight="1"
                    android:textColor="@color/black" />
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_5dp"
                    android:layout_weight="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <AutoCompleteTextView
                        android:fontFamily="@font/montserrat_medium"
                        android:id="@+id/dropdownPrinterSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/txt_13sp"
                        android:inputType="none"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView android:fontFamily="@font/montserrat_medium"
                    android:textSize="@dimen/txt_14sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:gravity="center|left"
                    android:text="@string/printer_mode"
                    android:layout_weight="1"
                    android:textColor="@color/black" />
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_5dp"
                    android:layout_weight="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <AutoCompleteTextView
                        android:fontFamily="@font/montserrat_medium"
                        android:id="@+id/dropdownPrinterMode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/txt_13sp"
                        android:inputType="none"
                        android:text="CONFIG-1" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView android:fontFamily="@font/montserrat_medium"
                    android:textSize="@dimen/txt_14sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:gravity="center|left"
                    android:text="@string/font_size"
                    android:layout_weight="1"
                    android:textColor="@color/black" />
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_5dp"
                    android:layout_weight="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <AutoCompleteTextView
                        android:fontFamily="@font/montserrat_medium"
                        android:id="@+id/dropdownFontSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/txt_13sp"
                        android:inputType="none"
                        android:text="Medium" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <!-- Switches -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp">

                <!-- Enable Auto Print Switch -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="@dimen/_10dp">

                    <TextView android:fontFamily="@font/montserrat_medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enable_auto_print"
                        android:textSize="@dimen/txt_14sp"
                        android:textColor="@color/black" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switchEnableAutoPrint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end|center"
                        android:layout_marginStart="16dp"
                        android:checked="false" />
                </LinearLayout>

                <!-- Open Cash Drawer Switch -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView android:fontFamily="@font/montserrat_medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/open_cash_drawer"
                        android:textSize="@dimen/txt_14sp"
                        android:textColor="@color/black" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switchOpenCashDrawer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:gravity="end|center"
                        android:checked="false" />
                </LinearLayout>

                <!-- Disconnect After Print Switch -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView android:fontFamily="@font/montserrat_medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/disconnect_after_print"
                        android:textSize="@dimen/txt_14sp"
                        android:textColor="@color/black" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switchDisconnectAfterPrint"
                        android:layout_width="match_parent"
                        android:gravity="end|center"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:checked="false" />
                </LinearLayout>

                <!-- Auto-Cut After Printing Switch -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView android:fontFamily="@font/montserrat_medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/auto_cut_after_print"
                        android:textSize="@dimen/txt_14sp"
                        android:textColor="@color/black" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switchAutoCutAfterPrint"
                        android:layout_width="match_parent"
                        android:gravity="end|center"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:checked="false" />
                </LinearLayout>
            </LinearLayout>

            <!-- Default Printer -->
            <TextView android:fontFamily="@font/montserrat_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                android:text="@string/default_printer"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:id="@+id/btnChangePrinter"
                android:layout_marginTop="@dimen/_15dp"
                android:background="@drawable/corner_four_stroke"
                android:padding="16dp">

                <ImageView
                    android:layout_width="@dimen/_30dp"
                    android:layout_height="@dimen/_30dp"
                    android:src="@drawable/printer_icon"
                    android:contentDescription="@string/printer_icon" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginStart="16dp">

                    <TextView
                        android:id="@+id/tvDefaultPrinter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_medium"
                        android:visibility="@{isDefaultPrinterAdded ? View.VISIBLE : View.GONE}"
                        android:text="@{thermalPrinter.defaultPrinterName}"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:text="Default" />
                    <TextView
                        android:id="@+id/txtAddDefaultPrinter"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/montserrat_medium"
                        android:visibility="@{isDefaultPrinterAdded ? View.GONE : View.VISIBLE}"
                        android:text="Add Default Printer"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView android:fontFamily="@font/montserrat_medium"
                        android:id="@+id/tvPrinterAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{thermalPrinter.defaultPrinterAddress}"
                        android:visibility="@{isDefaultPrinterAdded ? View.VISIBLE : View.GONE}"
                        android:textSize="14sp"
                        android:textColor="@color/gray"
                        tools:text="DC:0D:30:D6:0F:E0"/>
                </LinearLayout>

                <TextView android:fontFamily="@font/montserrat_medium"
                    android:id="@+id/textViewChangePrinter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="@{isDefaultPrinterAdded ? View.VISIBLE : View.GONE}"
                    android:text="@string/change"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@color/lite_grey_200"
            android:paddingTop="@dimen/_10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:id="@+id/btnupdate"
                android:layout_height="match_parent"
                app:cardCornerRadius="@dimen/_10dp"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@{isUpdateEnable ? @color/colorPrimary : @color/lite_grey_200}"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginEnd="@dimen/_20dp"
                android:layout_marginBottom="@dimen/_10dp"
                tools:cardBackgroundColor="@color/colorPrimary"
                android:textColor="@color/text_color_heading"
                android:gravity="center">

                <TextView android:fontFamily="@font/montserrat_medium"
                    android:layout_width="match_parent"
                    android:id="@+id/tv_update"
                    android:layout_height="match_parent"
                    android:text="Update"
                    android:padding="@dimen/_10dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/text_color_heading_reverse"/>
                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:indeterminate="true"
                    android:visibility="gone"
                    style="?android:attr/progressBarStyleHorizontal"/>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
